@@ -7,6 +7,7 @@ Changes:
 - Add Auxiliary parameters in Samba AD.
 - Add bhyve and related files. (CLI only)
 - Add hint.acpi_throttle.0.disabled="0", hint.p4tcc.0.disabled="0".
+- Remove usesendfile on CIFS/SMB.
 - Upgrade bash 4.3 to patch 42.
 - Upgrade lighttpd to 1.4.37.
 - Upgrade php to 5.6.13.
